3.1.7:
    - validate input alignment for TS preprocess protocol
3.1.6:
  icon added
  template added for automatic tilt series alignment
3.1.5: fix xf file reading, add IMOD 4.11.24, remove previous binaries as they are gone fron the website
3.1.4: set tilt axis to 0 if TS is aligned (reported by Bram Koster)
3.1.3: fix installation: remove libjpeg62 check
3.1.2:
- Flag ts as interpolated in some cases
- Imod protocols do not work, for now in streaming
3.1:
- remove displayAll button from set viewer as it seems to be not practical to open all items at once (close #141)
- change etomo naming style to mrc (close #153)
- output xtilt file from fid alignment
- rename fid alignment output to align.log and parse it with imod tools
- add beadtrack step  with current model as seed (close #160)
- refactor viewers:
   - remove ImodSetOfLandmarkModelsView, ImodSetOfTomogramsView, ImodSetView
   - remove displayAllButton
   - update etomoviewer for new naming style
   - show tilt angles in 3dmod viewer (close #161 )
   - fix saved3DCoord etomo output display
- fix rotation angle calculation for newstack operation
- remove transformation step from imod ctf estimation (ctf is estimated on raw ts stack)
- fix rotation angle range for swapping x/y for newstack
- do not copy objId for apply TM protocol when excluding views
- fix output size in apply TM protocol
- fix wrong output file index numbers in the exclude views protocol
- fix gold erasing option in the fid. alignment protocol
- fix generating ctf output; hide some params from manual ctf protocol; do not run autofit for manual protocol
- added xform file to ctfphaseflip to rotate astigmatism estimation and adjust for x-shifts for the image center
- fix excluded views parsing from com files
- rename "normalization" to "preprocess" protocols
- handle excluded views properly (closes #137 , closes #147)
- ctfplotter handles excluded views properly, output ctfs for such views have 0 values